# SwitchScript

./: .gitignore  .gitmodules  CMakeLists.txt  rubuild  rubuild.bat  ruclean  ruclean.bat  rudeploy  rudeploy.bat  rugen  rugen.bat
client/: CMakeLists.txt
cmake/: BinaryToCode.cmake  BinaryToCode.py  BinaryToCpp.py  ConfigTemplate.cmake.in  ConfigTemplate_triple.cmake.in  Rupkg.cmake  Rupkg.py  RupkgInitialize.cmake  ToolsConfigTemplate.cmake.in  ToolsConfigTemplate_triple.cmake.in
cmake/MCU/: atmega16u2.cmake
cmake/Platform/: AVR-Initialize.cmake  AVR.cmake  NintendoSwitch-Initialize.cmake  NintendoSwitch.cmake  Tizen-Initialize.cmake  Tizen.cmake
compiler/: CMakeLists.txt
compiler/src/: CompilerMain.cpp  CompilerOld.cpp  Main.cpp
compiler/src/Builder/: ByteCodeBuilder.cpp  ByteCodeBuilder.hpp
scripts/: Animal-Crossing-New-Horizon-Fishing.txt  Animal-Crossing-New-Horizon-Meteor.txt  PMSw&Sh-Fossil.txt
server/: CMakeLists.txt  makefile
server/src/: Command.h  Joystick.h  SwitchScriptServer.c  VM.c  VM.h
server/src/Arduino/: Arduino.h
server/src/avr/: Command.c  Command.h  SwitchScriptServer.c
tools/: CMakeLists.txt
tools/include/: compile.hpp
tools/src/: ClientMain.cpp  VMEmulatorMain.cpp
tools/src/Client/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
tools/src/Compiler/Builder/: ByteCodeBuilder.cpp
uploader/: CMakeLists.txt
vm/: CMakeLists.txt
vm/include/: vm.h  vm_limits.h
vm/include/vm/: limits.h
vm/src/: vm.c  vm_internal.h
vm/src/avr/: vm_millis.c  vm_program.c
vm/src/emulator/: main.cpp  vm_millis.c  vm_program.c
